--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -13,7 +13,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TIPO DI VINO}}                                                                                                                                                                                                                                                                                                                                                                                          \\
 		\midrule
-		Relativamente ai tipi di vino, identificati dal nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è, ad oggi, fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). \\
+		Relativamente ai tipi di vino, identificati attraverso il nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è, ad oggi, fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). \\
 		\bottomrule
 	\end{tabular}
 
@@ -23,7 +23,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\
 		\midrule
-		Le materie prime che vengono acquistate vengono identificate da un ID univoco. Se la materia prima è l'uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione. \\
+		Le materie prime che vengono acquistate vengono identificate attraverso un ID univoco. Se la materia prima è l'uva, questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi, viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione. \\
 		\bottomrule
 	\end{tabular}
 
@@ -43,7 +43,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                        \\
 		\midrule
-		Le aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate univocamente attraverso la loro Partita IVA e sono caratterizzate dal nome commerciale, dal cognome e nome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie. \\
+		Le aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate univocamente attraverso la loro Partita IVA e sono caratterizzate dal nome commerciale, dal cognome e nome del referente oltre che dal numero di telefono, dall'email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie. \\
 		\bottomrule
 	\end{tabular}
 
@@ -72,7 +72,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A PRIVATO}}                                                                                                                  \\
-		Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione). \\
+		Per i privati, identificati tramite un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione). \\
 		\bottomrule
 	\end{tabular}
 
@@ -81,7 +81,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}}                                                                                                                                    \\
-		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà. \\
+		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni edizione di un evento ha una data prefissata in cui si svolgerà o si e' svolto. \\
 		\bottomrule
 	\end{tabular}
 
