--- a/main.tex
+++ b/main.tex
@@ -22,10 +22,10 @@
 \begin{document}
 \title{%
     Progetto per il corso di Basi di Dati \\
-    \large LT in Informatica, Universita degli studi di Padova}
-\author{Niccolò Mantovani, 1234567
+    \large LT in Informatica, Università degli studi di Padova}
+\author{Niccolò Mantovani, 1187325
     \and
-    Filippo Pinton, 1234567}
+    Filippo Pinton, 1187361}
 \date{}
 
 \maketitle
