--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,3 +1,3 @@
 La cantina \emph{WineBase} venne fondata nel 1867 da due agricoltori Padovani spinti dalla comune passione per il vino del proprio territorio. Sin dal primo momento ricevettero un notevole apprezzamento, tanto da diventare in pochi anni l'icona del vino in Italia. A partire dalla seconda metà degli anni '90 la cantina iniziò un lungo percorso di modernizzazione circolare, con lo scopo principale di consolidare il proprio status di leader nel settore, oltre che di migliorare le condizioni lavorative dei propri dipendenti. Tale processo innovativo prevede oggi la digitalizzazione di tutte le attività non manuali in modo da poter rendere la tracciabilità dei propri prodotti più trasparente e affidabile. Nell'ultimo anno inoltre si è manifestata la volontà di cavalcare il trend dell'e-commerce permettendo quindi ai privati di acquistare direttamente dalla cantina attraverso un negozio online oltre che nei soliti punti vendita sparsi in tutta Italia. La base di dati che si vuole modellare ha lo scopo di supportare l'operatività della cantina, tenendo traccia delle materie prime acquistate, della produzione, degli ordini ricevuti e dell'organizzazione dei vari reparti produttivi. 
 
-Nel corso di questa relazione si sono innanzitutto analizzati nel dettaglio il caso di studio e i requisiti intrinsechi; tale analisi si e' resa necessaria per la definizione delle principali entita' e delle relazioni da cui queste ultime sono legate, andando quindi a realizzare un modello concettuale rappresentato graficamente in un diagramma ER. Si sono quindi studiate le interazioni piu' comuni che la base di dati che ci si e' proposti di sviluppare deve supportare, e attraverso una generale e profonda ristrutturazione del modello concettuale si e' proceduto all'implementazione della base di dati e alla dimostrazione di alcuni esempi di interazione con quest'ultima. Un'ultima analisi ha poi messo alla luce la possibilita' di ottenere un incremento delle prestazioni della base di dati creata attraverso la creazione di un indice; si e' quindi procedutto alla creazione di tale indice.
+Nel corso di questa relazione si sono innanzitutto analizzati nel dettaglio il caso di studio e i requisiti intrinsechi; tale analisi si è resa necessaria per la definizione delle principali entità e delle relazioni da cui queste ultime sono legate, andando quindi a realizzare un modello concettuale rappresentato graficamente in un diagramma ER. Si sono quindi studiate le interazioni più comuni che la base di dati che ci si è proposti di sviluppare deve supportare, e attraverso una generale e profonda ristrutturazione del modello concettuale si è proceduto all'implementazione della base di dati e alla dimostrazione di alcuni esempi di interazione con quest'ultima. Un'ultima analisi ha poi messo alla luce la possibilità di ottenere un incremento delle prestazioni della base di dati creata attraverso la creazione di un indice; si è quindi procedutto alla creazione di tale indice.
