--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -20,7 +20,7 @@
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
 
 		\midrule
-		Acquirente & Privato, Azienda & Colui che ha effettuato l'ordine. E' un privato o un'azienda &  Ordine\\
+		Acquirente & Privato, Azienda & Colui che ha effettuato l'ordine. È un privato o un'azienda &  Ordine\\
 
 		\midrule
 		Azienda & Fornitore, Negozio interno, Az. Manutenz. & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Materia prima, Evento, Macchinario\\
@@ -32,7 +32,7 @@
 		Corriere & & Il corriere che si occupa della spedizione di un ordine & Ordine\\
 		\midrule
 		
-		Evento & & Un evento organizzato all'interno di un negozio interno in onore di uno o piu' vini prodotti dalla cantina. &  Tipo Vino, Negozio Interno\\
+		Evento & & Un evento organizzato all'interno di un negozio interno in onore di uno o più vini prodotti dalla cantina. &  Tipo Vino, Negozio Interno\\
 
 		\midrule
 		Linea produttiva & & Un reparto produttivo interno alla cantina. &  Dipendente, Macchinario\\
