--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -3,7 +3,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{pr
 Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \textbf{prima entità} è una generalizzazione \emph{parziale} delle entità seguenti.
 
 \begin{verse}
-	Le entità \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} vengono omesse poiche' prive di attributi.
+	Le entità \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} vengono omesse poichè prive di attributi.
 \end{verse}
 \begin{verse}
 	\textbf{ProduzioneVino} $\gets$ \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura}.
