--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -101,7 +101,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poichè e' necessario tenere traccia del numero di bottiglie di vino per tipologia richieste dall'ordine.}
+	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poichè è necessario tenere traccia del numero di bottiglie di vino per tipologia richieste dall'ordine.}
 \end{verse}
 
 \begin{itemize}
