--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -6,14 +6,14 @@ Lo schema concenttuale presenta numerose generalizzazioni. Si procede quindi all
 
 \begin{flushleft}
 	\textbf{\large{Fornitore}}\\
-	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} (avendo relazioni specifiche) e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. E' stato quindi aggiunto alla sopracitata entita' l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
+	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} (avendo relazioni specifiche) e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. È stato quindi aggiunto alla sopracitata entità l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
 \end{flushleft}
 
 
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
 	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda} ad \emph{Acquirente} è $(0,1)$ poichè un'azienda può non essere un acquirente, mentre da \emph{Acquirente} ad \emph{Azienda} è $(0,1)$ poichè non tutti gli acquirenti sono un'azienda.
-	Con una logica analoga a quella applicata precedentemente e' stata creata la relazione \textbf{IsPrivato}, ovvero la cardinalità da \emph{Acquirente} a \emph{Privato} è $(0,1)$ poichè non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poichè un privato è sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in più ad \emph{Azienda} verrà aggiunto l'attributo \emph{NumAcquirente} che sarà chiave esterna ad \emph{Acquirente}. Si è deciso di aggiungere questo attributo con la consapevolezza che quest'ultimo corrispondera' a \textbf{NULL} in corrispondenza dei record che rappresentano fornitori che non sono anche acquirenti, ma poiche' la quantita' di aziende acquirenti ci si aspetta sia di gran lunga superiore alla quantita' dei fornitori non acquirenti, ci si aspetta che i campi con valore \emph{NULL} siano in numero irrilevante.
+	Con una logica analoga a quella applicata precedentemente è stata creata la relazione \textbf{IsPrivato}, ovvero la cardinalità da \emph{Acquirente} a \emph{Privato} è $(0,1)$ poichè non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poichè un privato è sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in più ad \emph{Azienda} verrà aggiunto l'attributo \emph{NumAcquirente} che sarà chiave esterna ad \emph{Acquirente}. Si è deciso di aggiungere questo attributo con la consapevolezza che quest'ultimo corrisponderà a \textbf{NULL} in corrispondenza dei record che rappresentano fornitori che non sono anche acquirenti, ma poichè la quantità di aziende acquirenti ci si aspetta sia di gran lunga superiore alla quantità dei fornitori non acquirenti, ci si aspetta che i campi con valore \emph{NULL} siano in numero irrilevante.
 \end{flushleft}
 
 \begin{flushleft}
