--- a/src/progettazioneLogica/identificatori_principali.tex
+++ b/src/progettazioneLogica/identificatori_principali.tex
@@ -6,5 +6,5 @@ Oltre agli identificatori visti nella sezione \textbf{\ref{analisiEntita}}, sono
 	\item L'entità \emph{Informazione} appena aggiunta ha come chiave primaria l'attributo \textbf{ID};
 	\item L'entità \emph{Indirizzo} appena aggiunta ha come chiave primaria l'attributo \textbf{ID} che è anche chiave esterna all'attributo \textbf{Indirizzo} di \emph{Informazione} e \emph{Vigneto};
 	\item Le entità \emph{Uva, Tappo, Bottiglia} hanno ereditato l'attributo \textbf{ID} dalla generalizzazione \emph{MateriaPrima};
-	\item E' stato aggiunto l'attributo \textbf{ID}, che è chiave primaria, a \emph{BottgiliaDiVino ed Evento} per rendere più semplice le relazioni con queste entità.
+	\item È stato aggiunto l'attributo \textbf{ID}, che è chiave primaria, a \emph{BottgiliaDiVino ed Evento} per rendere più semplice le relazioni con queste entità.
 \end{itemize}
