--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -168,7 +168,7 @@
 
 
 	\begin{verse}
-		*\emph{Per ovviare al problema del vincolo referenziale tra 	\textbf{BottiglieDiVino.Annata e Vini.Uva.Annata}, oltre che di \textbf{Ordini.PrezzoTotale} come somma di $BottiglieDiVino.Prezzo \times Dettagli.QuantitaBottiglie)+ Spedizioni.Prezzo$} sarebbe necessario aggiungere dei \textbf{TRIGGER}. Questi non sono stati implementati poiche' l'argomento non e' stato trattato durante il corso.
+		*\emph{Per ovviare al problema del vincolo referenziale tra 	\textbf{BottiglieDiVino.Annata e Vini.Uva.Annata}, oltre che di \textbf{Ordini.PrezzoTotale} come somma di $BottiglieDiVino.Prezzo \times Dettagli.QuantitaBottiglie)+ Spedizioni.Prezzo$} sarebbe necessario aggiungere dei \textbf{TRIGGER}. Questi non sono stati implementati poichè l'argomento non è stato trattato durante il corso.
 	\end{verse}
 
 \end{center}
