--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -3,7 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\
 		\midrule
-		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, ed e' la composizione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'anno (\emph{annata}) di imbottigliamento. Per ogni prodotto e' necessario tenere traccia del prezzo, del numero di unità prodotte e vendute, oltre che del tipo di tappo e del tipo di bottiglia. Nel magazzino viene tenuto traccia della quantità delle bottiglie. Le bottiglie di vino possono essere spedite in una determinata quantità negli ordine di vendita \\
+		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, ed è la composizione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'anno (\emph{annata}) di imbottigliamento. Per ogni prodotto è necessario tenere traccia del prezzo, del numero di unità prodotte e vendute, oltre che del tipo di tappo e del tipo di bottiglia. Nel magazzino viene tenuto traccia della quantità delle bottiglie. Le bottiglie di vino possono essere spedite in una determinata quantità negli ordine di vendita \\
 		\bottomrule
 	\end{tabular}
 
@@ -23,7 +23,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\
 		\midrule
-		Le materie prime che vengono acquistate vengono identificate attraverso un ID univoco. Se la materia prima è l'uva, questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi, viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione. \\
+		Le materie prime che vengono acquistate vengono identificate attraverso un ID univoco. Se la materia prima è l'uva, questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi, viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poichè tutta l'uva viene utilizzata immediatamente dopo la ricezione. \\
 		\bottomrule
 	\end{tabular}
 
@@ -53,7 +53,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}}                                                                                                                                                                                                                                                                                          \\
 		\midrule
-		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere a cui è stata affidata la consegna, la data di spedizione, l'eventuale data di consegna e il prezzo totale (che deve corrispondere al prodotto tra la quantita' delle bottiglie di vino acquistate ed il relativo prezzo, sommato al costo della spedizione). \\
+		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere a cui è stata affidata la consegna, la data di spedizione, l'eventuale data di consegna e il prezzo totale (che deve corrispondere al prodotto tra la quantità delle bottiglie di vino acquistate ed il relativo prezzo, sommato al costo della spedizione). \\
 		\bottomrule
 	\end{tabular}
 
@@ -81,7 +81,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}}                                                                                                                                    \\
-		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni edizione di un evento ha una data prefissata in cui si svolgerà o si e' svolto. \\
+		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni edizione di un evento ha una data prefissata in cui si svolgerà o si è svolto. \\
 		\bottomrule
 	\end{tabular}
 
@@ -99,7 +99,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A DIPENDENTE}}                                                                                                                                                                                                                                                                                                   \\
-		Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente (esclusi alcuni supervisori) ha un supervisore a cui fare riferimento e ogni linea produttiva e' diretta da un supervisore. Per ogni dipendente e' necessario tenere traccia dei turni di lavoro effettuati e della linea produttiva in cui i vari turni sono svolti. \\
+		Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente (esclusi alcuni supervisori) ha un supervisore a cui fare riferimento e ogni linea produttiva è diretta da un supervisore. Per ogni dipendente è necessario tenere traccia dei turni di lavoro effettuati e della linea produttiva in cui i vari turni sono svolti. \\
 		\bottomrule
 	\end{tabular}
 
